2008-03-16 [paul]	3.3.1cvs25

	* manual/faq.xml
		fix typo

2008-03-14 [colin]	3.3.1cvs24

	* src/prefs_filtering_action.c
		Fix buglet on setting recipient when
		reediting forward rules.

2008-03-12 [colin]	3.3.1cvs23

	* src/summaryview.c
		Fix a new unused variable warning
	* src/plugins/trayicon/trayicon.c
		Fix folderview's scrollbar at startup
		if starting hidden

2008-03-12 [colin]	3.3.1cvs22

	* src/folderview.c
	* src/summaryview.c
		Use item_opened at the beginning of showing
		a folder instead of the end. Fixes flicker.

2008-03-12 [paul]	3.3.1cvs21

	* src/folder.c
	* src/folder.h
	* src/mainwindow.c
	* src/procmsg.c
	* src/summaryview.c
	* src/plugins/trayicon/trayicon.c
		add tooltip with extended folder stats

2008-03-10 [colin]	3.3.1cvs20

	* src/common/xml.c
		Handle comments

2008-03-07 [colin]	3.3.1cvs19

	* src/mainwindow.c
		Fix blinking of the taskbar entry

2008-03-07 [colin]	3.3.1cvs18

	* src/mainwindow.c
		MAEMO: Fix bug 1494, 'Trayicon 
		plugin breaks UI...'

2008-03-07 [paul]	3.3.1cvs17

	* src/gtk/authors.h
		reflect reality a bit more closely

2008-03-06 [colin]	3.3.1cvs16

	* src/mainwindow.c
	* src/mainwindow.h
	* src/summaryview.c
	* src/summaryview.h
	* src/toolbar.c
		Integrate things better wrt the new
		summaryview extensibility.

2008-03-06 [wwp]	3.3.1cvs15

	* src/quote_fmt.c
		Fix some gcc warnings.

2008-03-06 [wwp]	3.3.1cvs14

	* src/prefs_account.c
	* src/prefs_folder_item.c
	* src/prefs_gtk.c
	* src/prefs_template.c
	* src/gtk/prefswindow.c
	* src/gtk/prefswindow.h
		prefs_templates: fix missing unregistering of addr_completion widgets
		and and ending of addr_completion service.
		prefs_folder_item: fix missing registering/unregistering of widgets,
		and rework the way add_completion service is started and stopped.
		Plus few prefswindow API changes (opening).

2008-03-06 [wwp]	3.3.1cvs13

	* src/folder_item_prefs.c
	* src/prefs_template.c
	* src/prefs_template.h
	* src/quote_fmt.c
	* src/common/template.c