@@ -1,3 +1,11 @@
+2008-03-16 [colin]	3.3.1cvs26
+
+	* src/summaryview.c
+	* src/gtk/gtksctree.c
+	* src/gtk/gtksctree.h
+		Implement 2-lines items in Summaryview when in 
+		three columns mode
+
 2008-03-16 [paul]	3.3.1cvs25
 
 	* manual/faq.xml
